# corewar

CoreWar/: CMakeLists.txt
CoreWar/files/: helltrain.cor  jumper.cor  mybot.cor  myfluttershy.cor
CoreWar/inc/: errors.h  vm.h  vm_init.h
CoreWar/lib/mylib/: CMakeLists.txt
CoreWar/src/: additional_function.c  get_flags.c  iobytes.c  main.c  pc_manipulation.c  print_field.c  print_usage.c  processing_game.c  processing_players.c  set_options_and_execute.c
CoreWar/src/commands/: commands1-5.c  commands11-15.c  commands6-10.c  dop11-15commands.cpp
CoreWar/src/errors/: errors1.c
CoreWar/src/init_del_functions/: free_memory.c  init_and_nulling_header.c  init_and_nulling_pc.c  init_and_nulling_player_and_game_info.c  init_arrays.c  initialisation.c
CoreWar/src/processing_program_args/: processing_players_args.c  valid_and_set_numbers.c
CoreWar/src/read_options/: for_read_options.c  read_options1.c  read_options2.c
